# stocks

./: requirements.txt  stock_data.db
news_parser/: README.md  requirements.txt
news_parser/news_parser/: __init__.py  config.py  fetcher.py  jobs.py  summary.py  ticker_match.py  utils.py
news_parser/tests/: test_dedup.py  test_fetcher.py  test_summary.py
v1/: app.py  auto_update.py  database.py  indicators.py  populate_database.py  stock_analyzer.py  stock_data.db  test.py  test2.py  test3.py  visualization.py
v1/.streamlit/: secrets.toml
v1/FilesBd/: 01-02-25.csv  01-03-25.csv  04-03-25.csv  05-02-25.csv  05-03-25.csv  06-02-25.csv  06-03-25.csv  07-03-25.csv  08-03-25.csv  11-02-25.csv  11-03-25.csv  12-02-25.csv  12-03-25.csv  13-02-25.csv  14-02-25.csv  14-03-25.csv  15-02-25.csv  17-12-24.csv  18-01-25.csv  18-02-25.csv  18-03-25.csv  19-02-25.csv  19-03-25.csv  20-03-25.csv  20-12-24.csv  21-01-25.csv  21-03-25.csv  21-12-24.csv  22-02-25.csv  22-03-25.csv  23-01-25.csv  25-03-25.csv  25-12-24.csv  26-02-26.csv  27-02-25.csv  27-12-24.csv  28-01-25.csv  28-02-25.csv  28-12-24.csv
v1/TEST/: 04-01-25.csv  04-02-25.csv  07-01-25.csv  07-02-25.csv  08-02-25.csv  09-01-25.csv  10-01-25.csv  11-01-25.csv  14-01-25.csv  15-01-25.csv  16-01-25.csv  17-01-25.csv  18-12-24.csv  19-12-24.csv  22-01-25.csv  24-01-25.csv  24-12-24.csv  25-01-25.csv  26-12-24.csv  29-01-25.csv  30-01-25.csv  31-12-24.csv  31-12-25.csv
v1/olds/: bd.py
v3/: .env  01-04-25.csv  01-07-25.csv  02-04-25.csv  02-07-25.csv  03-04-25.csv  03-06-25.csv  03-07-25.csv  04-04-25.csv  04-06-25.csv  04-07-25.csv  05-04-25.csv  05-06-25.csv  05-07-25.csv  06-06-25.csv  07-06-25.csv  08-04-25.csv  08-07-25.csv  09-04-25.csv  10-04-25.csv  10-06-25.csv  10-07-25.csv  11-04-25.csv  11-06-25.csv  11-07-25.csv  11-09-25.csv  12-04-25.csv  12-06-25.csv  12-07-25.csv  12-09-25.csv  13-03-25.csv  14-06-25.csv  15-03-25.csv  15-04-25.csv  16-04-25.csv  17-04-25.csv  17-06-25.csv  17-07-25.csv  18-04-25.csv  18-06-25.csv  (+123 more)
v3/.streamlit/: config.toml
v3/config/: analytics.yml  news_pipeline.yml  notifications.yml
v3/core/: __init__.py  analyzer.py  bootstrap.py  cascade_analyzer.py  cascade_analyzer_enhanced.py  cascade_notifications.py  data_loader.py  data_updater.py  data_updater_enhanced.py  data_updater_optimized.py  data_updater_rate_limited.py  data_updater_with_shares.py  database.py  demo_trading.py  multi_timeframe_analyzer.py  multi_timeframe_analyzer_enhanced.py  multi_timeframe_analyzer_real.py  multi_timeframe_db.py  news.py  parser.py  populate.py  realtime_manager.py  realtime_manager_enhanced.py  settings.py  shares_integration.py  tinkoff_websocket_provider.py  ui.py  utils.py  utils_db.py  visualization.py
v3/core/scheduler/: API.md  DEPLOYMENT.md  MANIFEST.in  README.md  __init__.py  __main__.py  app_integration.py  cli.py  config.py  example.py  example_usage.py  examples.py  integration.py  integration_example.py  migrations.py  pyproject.toml  quick_start.py  real_integration.py  requirements.txt  scheduler.py  setup.py  streamlit_app.py  streamlit_integration.py  trading_calendar.py  utils.py
v3/docs/: API_FILTERING_CORRECTED.md  AUTOMATIC_CASCADE_UI.md  AUTO_TRADING_GUIDE.md  AUTO_TRADING_IMPLEMENTATION_REPORT.md  BATCH_PROCESSING_STATS.md  CASCADE_ANALYZER_FINAL_GUIDE.md  CASCADE_ANALYZER_GUIDE.md  CASCADE_ASYNC_ERROR_FIX.md  CASCADE_BUTTONS_GUIDE.md  CASCADE_INTEGRATION_COMPLETE.md  CASCADE_WORKFLOW_FIX.md  INSTALLATION.md  (+82 more)
(+319 files in other folders)
